[tool.poetry]
name = "dicery_backend"
version = "0.1.0"
description = ""
authors = ["Margret `Pax` Williams <pax.margret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
sse-starlette = "^0.3.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
