[tool.poetry]
name = "dicery_backend"
version = "0.1.0"
description = ""
authors = ["Margret 'Pax' Williams <pax.margret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.0"
uvicorn = "^0.11.5"
sse-starlette = "^0.3.4"
python-multipart = "^0.0.5"
sqlalchemy = "^1.3.17"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4"
black = {version = "^19.10b0", allow-prereleases = true}
pylama = "^7.7.1"
bandit = "^1.6.2"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
